Fixed overflowing editor

--- a/pages/e/index.css
+++ b/pages/e/index.css
@@ -2,9 +2,6 @@
     @apply !bg-secondary;
 }
 
-.editor-bg {
-}
-
 .wmde-markdown .code-highlight {
     @apply !bg-secondary-dark;
 }
